# cclens

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile  poc_analyze.py
.claude-plugin/: marketplace.json
.claude/rules/: commit-convention.md  format-isolation.md  session-data-privacy.md  spec-sync.md  tdd.md
.github/workflows/: ci.yml  release.yml
docs/specs/: architecture.md  cli.md  config-format.md  events.md  session-format.md  storage.md  surfaces.md
plugins/cclens/.claude-plugin/: plugin.json
plugins/cclens/skills/doctor/: SKILL.md
plugins/cclens/skills/optimize/: SKILL.md
plugins/cclens/skills/query/: SKILL.md
plugins/cclens/skills/summary/: SKILL.md
src/: adapter.rs  cli.rs  core.rs  lib.rs  main.rs  store.rs
src/adapter/: config.rs  transcript.rs
src/core/: bucket.rs  friction.rs  metrics.rs  optimize.rs  prompt.rs  scope.rs  span.rs  surface.rs  thrash.rs  usage.rs
